log
Sat 20 Aug 2022 02:52:55 AM UTC: 
 tests:  0|6
total_score: 0/70
cd1b2d1
Sat 20 Aug 2022 02:53:42 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:45:30: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |     if(list->current  && list->next){
      |                              ^~
list.c:46:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |     list->current=list->next;
      |                       ^~
Compilation failed
4acd936
Sat 20 Aug 2022 02:54:27 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
1de7889
Sat 20 Aug 2022 02:59:18 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
4631ec3
